fixed layout bugs| added more info

--- a/src/app.scss
+++ b/src/app.scss
@@ -158,14 +158,13 @@ html, body {min-height: 100%;}
       }
       &>div
       {
+        overflow: hidden;
         background: center no-repeat/ cover;
         width: 100%;
         height: 100%;
-        position: absolute;
         animation: 7s bg-move ease-in-out alternate infinite;
         @include respond-to(mobile) { 
           animation: unset;
-          // background-position: center !important;
         }
       }
     }
@@ -186,14 +185,14 @@ html, body {min-height: 100%;}
       }
       &>div
       {
-        background: fixed no-repeat center/cover;
+        background: no-repeat center/cover;
         clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
         width: 18vw;
         height: 18vw;
         position: absolute;
         top: 1vw;
         z-index: -1;
-        animation: 5s bg-move ease-in-out alternate infinite;
+        animation: 10s bg-move ease-in-out alternate infinite;
         @include respond-to(mobile) { 
           animation: unset;
           width: 180px;
@@ -220,7 +219,7 @@ html, body {min-height: 100%;}
       position: absolute;
       top: 13vw;
       right: 13vw;
-      z-index: 3;
+      z-index: 1;
       transform: rotate(45deg);
       transform-origin: center;
       transition: box-shadow .2s ease;
@@ -292,12 +291,12 @@ html, body {min-height: 100%;}
   .detail-wrapper
   {
     position: relative;
-    z-index: 3;
-    overflow: visible;
+    z-index: 2;
     .blank
     {
       width: 100%;
-      height: 50%;
+      height: 100%;
+      z-index: -1;
       background-color: white;
       position: absolute;
       top: 0;
@@ -309,6 +308,7 @@ html, body {min-height: 100%;}
       width: 100vw;
       height: 100vh;
       position: relative;
+      overflow: hidden;
       .mask{
         position : absolute;
         z-index  : 2;
@@ -377,7 +377,8 @@ html, body {min-height: 100%;}
     }
     .gallery
     {
-      z-index: 4;
+      overflow-x: hidden;
+      // z-index: 4;
       &>h1
       {
         text-align: center;
@@ -388,8 +389,7 @@ html, body {min-height: 100%;}
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 80%;
-        margin: 0 auto;
+        width: 100%;
         flex-wrap: wrap;
         .card
         {
@@ -400,7 +400,6 @@ html, body {min-height: 100%;}
           overflow: hidden;
           border-radius: 2%;
           box-shadow: 0px 0px 0px 0px rgba(100,100,100,0.7), 0px 0px 0px 0px rgba(100,100,100,0.7);
-          // background-position: 0 0 !important;
           transition: .4s all ease;
           @include respond-to(mobile) { 
             width: 100%;
@@ -411,14 +410,15 @@ html, body {min-height: 100%;}
             opacity: 0;
             text-align: center;
             transition: .3s all ease;
-            padding: 1em;
             bottom: 0;
             height: 30%;
-            width: auto;
+            width: 100%;
             color: white;
             position: absolute;
             overflow: hidden;
-            // background-color: rgba(100,100,100,0.3);
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
             background-image : linear-gradient(to bottom, 
                           rgba(100,100,100, 0), 
                           rgba(100,100,100, .9) 100%);
@@ -438,6 +438,8 @@ html, body {min-height: 100%;}
             {
               font-weight: 200;
               letter-spacing: 1px;
+              width: 100%;
+              word-wrap: break-word;
             }
           }
           &:hover
